syntax = "proto3";

package wheel.vexillum;

option java_package = "dev.jacksonbailey.wheel.vexillum.api";
option java_outer_classname = "VexillumProtos";
option java_multiple_files = true;
option java_string_check_utf8 = true;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  optional string name = 1;
}

message HelloReply {
  optional string message = 1;
}
